# Heyavatar

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.history/scratch/: render_user_avatar_20260622124650.py  render_user_avatar_20260622125624.py
api/: app.py
api/app/: __init__.py  factory.py  metrics.py  queue_factory.py  state.py
api/auth/: api_key.py
api/routes/: avatars.py  health.py  jobs.py
api/schemas/: avatars.py  jobs.py
captures/: job-smoke.concat.txt
contracts/: avatar_engine.py  body_asset_provider.py  compositor.py  face_renderer.py  gesture_planner.py  job_queue.py  lip_sync_engine.py  motion_repository.py  quality_checker.py
docs/: ARCHITECTURE.md  MODEL_LICENSES.md  REPOSITORY_SLIMMING_PLAN.md  rendering_optimizations.md
docs/examples/: timeline_three_segment.json
ops/: docker_entrypoint.sh  healthcheck.py
ops/prometheus/: prometheus.yml
providers/: __init__.py  _ffmpeg.py
providers/echomimic/: adapter.py  manifest.yaml
providers/liveportrait/: adapter.py  audio_bridge.py  checkpoint_manager.py  inference_config.py  manifest.yaml
providers/musetalk/: adapter.py  manifest.yaml
registry/: body_profiles.yaml  facial_motions.yaml  gestures.yaml  hand_poses.yaml  models.yaml  render_profiles.yaml
scratch/: animate_5s.py  animate_edge_tts.py  animate_static_image.py  benchmark_gpu_seconds.py  check_full_diff.py  debug_kps.py  inspect_exp.py  inspect_warp.py  measure_resources.py  render_user_avatar.py  run_real_rendering.py  run_test_flow.py  verify_test.py
scratch/face_motion_smoke2/: face_timeline.json
src/application/: __init__.py  avatar_image.py  body_template_runtime.py  compile_avatar.py  plan_video.py  precompute_avatar.py  render_cached_avatar.py  render_video.py  run_cached_avatar_from_text.py  speech_synthesis.py  telemetry.py  validate_video.py
src/body/: registry.py  resolver.py
src/core/: __init__.py  config.py  logging.py
src/domain/: __init__.py  avatar_pack.py  (+4 more)
tests/: _fixtures.py  conftest.py
tools/: run_cached_avatar.py  speak_avatar.py
workers/: avatar_precompute_worker.py  composition_worker.py  encoding_worker.py  face_worker.py  gpu_worker.py  lipsync_worker.py  planner_worker.py  quality_worker.py
(+204 files in other folders)
